--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^4.2.1",
     "@mdi/js": "^6.6.96",
     "@mdi/react": "^1.6.0",
     "@reduxjs/toolkit": "^1.8.1",
@@ -12,6 +13,7 @@
     "axios": "^0.26.1",
     "draft-js": "^0.11.7",
     "moment": "^2.29.3",
+    "normalize.css": "^8.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
