--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "bcryptjs": "^2.4.3",
     "chalk": "^5.0.1",
     "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "pg": "^8.7.3"
