--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
   "scripts": {
     "start": "node rserve/server.js"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "chalk": "^5.0.1",
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "pg": "^8.7.3"
+  },
+  "engines": {
+    "node": "17.3.0"
   }
 }
